# nix-secret-bridge

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  RELEASE.md  RFC.md  ROADMAP.md  SECURITY.md  deny.toml  flake.nix  module.nix  package.nix
.github/workflows/: ci.yml
doc/: manual.md
examples/: deploy.sh  disko-config.nix  installer-config.nix
examples/secrets/: luks-key.age
pkgs/by-name/ni/nix-secret-bridge/: package.nix
src/: cleanup.rs  error.rs  main.rs  mount.rs  security.rs
src/backends/: age.rs  age_backend.rs  mod.rs  sops.rs  sops_backend.rs
tests/: default.nix
