[package]
name = "nix-secret-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Mutasem Kharma <mutasem@kharma.dev>"]
license = "MIT"
description = "Bootstrap secret bridge for NixOS disko LUKS keys"
repository = "https://github.com/Mutasem-mk4/nix-secret-bridge"
readme = "README.md"
keywords = ["nixos", "secrets", "luks", "disko", "encryption"]
categories = ["command-line-utilities", "cryptography"]
rust-version = "1.74"

[profile.release]
panic = "abort"
lto = "thin"
strip = true
codegen-units = 1

[profile.dev]
panic = "abort"

[dependencies]
age = { version = "0.11.3", features = ["armor"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
nix = { version = "0.31.3", features = ["fs", "mman", "mount", "process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
which = "8.0.2"
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
